<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">The God Project</string>
    <string name="download_path">.MyChurch</string>
    <string name="onboarding_text_one">The God Project</string>
    <string name="onboarding_text_two">Packed with Features</string>
    <string name="onboarding_text_three">Audio, Video \n &amp; Live Streaming</string>
    <string name="onboarding_text_four">Create Account</string>
    <string name="onboarding_hint_one">Extend beyond the Sunday mornings &amp; the four walls of your church. Stay connected and inspired in a mobile-focused world.</string>
    <string name="onboarding_hint_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue lacus non felis mattis, sed euismod odio auctor. Events, Devotionals, Notifications, Notes and multi-version bible.</string>
    <string name="onboarding_hint_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer congue lacus non felis mattis, sed euismod odio auctor.</string>
    <string name="onboarding_hint_four">Start your journey to a never-ending worship experience.</string>
    <string-array name="report_comment_options">
        <item>Unwanted commercial content or spam</item>
        <item>Pornography or sexual explicit material</item>
        <item>Hate speech or graphic violence</item>
        <item>Harassment or bullying</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no_network">No Data network detected on the device</string>
    <string name="no_comments">No Comments</string>
    <string name="cant_load_more_comments">Could not load more comments</string>
    <string name="home">Home</string>
    <string name="artists_profiles">Artists Profiles</string>
    <string name="playlists">Playlists</string>
    <string name="downloads">Downloads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="delete_all_pins_warning">Do you want to delete all your bookmarked media?</string>
    <string name="clear_all_pins">Clear Bookmarked Media</string>
    <string name="no_eq">No equalizer found!</string>
    <string name="audio_playlists">Audio Playlists</string>
    <string name="video_playlists">Video Playlists</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="new_audio_playlist">New Audio Playlist</string>
    <string name="new_video_playlist">New Video Playlist</string>
    <string name="begin_search">Tap the bar above to begin a search</string>
    <string name="load_more">load more</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="audio_tracks">Audio Messages</string>
    <string name="video_tracks">Video Messages</string>
    <string name="tracks">Tracks</string>
    <string name="playlist">Playlist</string>
    <string name="my_playlist">My Playlist</string>
    <string name="search_result">Search Result</string>
    <string name="search_results">Search Results</string>
    <string name="search_mp3">Search Mp3</string>
    <string name="search_lyrics">Search Lyrics</string>
    <string name="search">Search</string>
    <string name="saved_video">Saved Video</string>
    <string name="media_bookmarked">Bookmarked</string>
    <string name="media_unbookmarked">removed from bookmarks</string>
    <string name="media_already_saved">media already saved</string>
    <string name="media_deleted">Media deleted</string>
    <string name="bookmarked_medias">Bookmarked media(s)</string>
    <string name="profile">Portfolio</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="delete_media">Delete media</string>
    <string name="music_shuffled">current music list shuffled</string>
    <string name="delete_media_hint">This will delete the media from your device. Do you want to continue?</string>
    <string name="delete_media_failed">Failed to delete Media File!</string>
    <string name="no_playlist">No playlist found \nTo create a new playlist\nClick on the add button below</string>
    <string name="no_media">No media found \nClick on the add button below\nto add media to playlist</string>
    <string name="no_media_on_playlist">No media found</string>
    <string name="request_permission_hint">Permission needed</string>
    <string name="request_folder_msg">We require your permission to save or to list all downloaded media files to/from your device.</string>
    <string name="request_audio_msg">We require your permission to show audio music visualizer.</string>
    <string name="trending">Hot and Trending</string>
    <string name="most_downloaded">Most downloaded</string>
    <string name="featured">Featured list</string>
    <string name="playing_media" translatable="false">&lt;b>%1s&lt;/b>&lt;br/>%2s</string>
    <string name="bad_id">No Media playing!</string>
    <string name="search_hint">Search for video &amp; audio</string>
    <string name="no_bookmarked_media">No Bookmarked media</string>
    <string name="wait">Processing Request</string>
    <string name="my_downloads">My Downloads</string>
    <string name="my_tracks">All Music Tracks</string>
    <string name="downloading">Downloading</string>
    <string name="download_options">DOWNLOAD OPTIONS</string>
    <string name="download_failed">DOWNLOAD FAILED</string>
    <string name="download_complete">DOWNLOAD COMPLETE</string>
    <string name="download_cancelled">download cancelled</string>
    <string name="no_data">No data found</string>
    <string name="playback_error">Cant play audio at the moment</string>
    <string name="playlist_title">title of playlist</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="clear_media">Clear All Media</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="sponsored">Sponsored</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="retry">retry</string>
    <string name="done">done</string>
    <string name="cant_process">oops!!! something went wrong.</string>
    <string name="no_file_manager">Please install a File Manager</string>
    <string name="clear_playlist_info">Clear playlist media</string>
    <string name="clear_playlist_message">Do you wish to delete all media from this playlist?</string>
    <string name="network_error">No data connection detected \n please rectify and click to retry.</string>
    <string name="data_error">An error occurred \n while fetching data \n please click to retry.</string>
    <string name="make_comment_error">Can\'t publish your comment at the moment</string>
    <string name="edit_comment_error">Can\'t edit your comment at the moment</string>
    <string name="delete_comment_error">Can\'t delete your comment at the moment</string>
    <string name="report_comment_error">Can\'t report your comment at the moment</string>
    <string name="like_media_error">Can\'t process media reactions at the moment</string>
    <string name="share_text"> Via MyChurch App. Download now at </string>
    <string name="share_app_text">Join the Video and Audio streaming platform that lets you watch and listen to millions of files from around the world. Download now at </string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="permission_permanently_denied">Permission Permanently Denied, cannot process.</string>
    <string name="permission_denied">Permission Denied, cannot process.</string>
    <string name="general">GENERAL</string>
    <string name="about">ABOUT</string>
    <string name="version">Version</string>
    <string name="show_last_search">Always save my search</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_hint">Click here to remove all ads for just a token.</string>
    <string name="rate_app">Rate this app</string>
    <string name="rate_app_hint">Visit the playstore to leave a review about this app.</string>
    <string name="terms">Terms and Conditions</string>
    <string name="terms_hint">Read end user license agreement for using this app</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">Please send us your feedbacks and recommendations for this app</string>
    <string name="developer">Developer profile</string>
    <string name="developer_hint">Visit and view other apps from the developer.</string>
    <string name="share_app">Share this app</string>
    <string name="share_app_hint">Let your friends and family know about this app.</string>
    <string name="player_error">No data connection detected.</string>
    <string name="app_email">figure8dev@gmail.com</string>
    <string name="feedback_subject">Feedbacks and recommendations for this app.</string>
    <string name="developer_feedback">Developer feedback.</string>
    <string name="title_activity_playlist">Playlists</string>
    <string name="cant_add_to_playlist">cant add to playlist at the moment</string>
    <string name="media_added_to_playlist">Media added to playlist</string>
    <string name="download_finished">Download finished</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="cancel_current_download">Media is currently downloading, Do you want to cancel current download?</string>
    <string name="login">Login</string>
    <string name="invalid_email_hint">Please enter a valid email address</string>
    <string name="error">Error</string>
    <string name="password_error_hint">Password field is empty</string>
    <string name="success">success</string>
    <string name="passwords_dont_match">Passwords dont match</string>
    <string name="password_too_short_hint">Password is too short, must not be less than 6 digits</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="remove_bookmark">Remove from Bookmarks</string>
    <string name="download">Download</string>
    <string name="playlist_name_short_hint">Playlist name is too short!</string>
    <string name="playlist_name_empty_hint">Playlist name cannot be empty</string>
    <string name="playlist_added">Playlist added</string>
    <string name="new_playlist">New Playlist</string>
    <string name="more">More</string>
    <string name="account">Account</string>
    <string name="create_an_account">Create an Account or Login</string>
    <string name="create_account_hint">Its absolutely free and we wont share your account details with anyone.</string>
    <string name="start_subscription">Unlock Premium Features</string>
    <string name="app_subscription">App Subscription</string>
    <string name="start_sub_hint">start your journey to a never-ending media streaming experience.</string>
    <string name="logout_app">Logout from app</string>
    <string name="logout_app_hint">Disconnect your user account from this app.</string>
    <string name="categories">Categories</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="email_address">Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="live_streams">Live Tv</string>
    <string name="read">Read</string>
    <string name="read_chapter">Read Chapter</string>
    <string name="night_mode">Night Mode</string>
    <string name="highlighted_verses">Highlighted Verses</string>
    <string name="bio">Bio</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
</resources>