<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_livestreams"
            android:icon="@drawable/livestreams"
            android:title="@string/live_streams" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/trending"
            android:title="@string/trending" />

        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/videos"
            android:title="@string/video_tracks" />

        <item
            android:id="@+id/nav_audios"
            android:icon="@drawable/audio"
            android:title="@string/audio_tracks" />

        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/playlists"
            android:title="@string/my_playlist" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/bookmarks"
            android:title="@string/my_bookmarks" />

        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/more"
            android:title="@string/more" />
    </group>


</menu>
