<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="5dp"
    android:id="@+id/feed_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <apps.envision.mychurch.ui.fonts.RobotoBoldTextView
        android:text="@string/app_name"
        android:textSize="18sp"
        android:autoLink="web"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/material_grey_200"/>


    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textColor="@color/material_grey_700"
            android:textSize="17sp"
            android:text="@string/version" />

        <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center"
            android:textColor="@color/material_grey_700"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/material_grey_200"/>

        <LinearLayout
            android:id="@+id/share_app"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="17sp"
                android:text="@string/share_app" />

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:id="@+id/share_app_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="14sp"
                android:text="@string/share_app_hint" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/material_grey_200"/>


        <LinearLayout
            android:id="@+id/rate_app"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="17sp"
                android:text="@string/rate_app" />

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="14sp"
                android:text="@string/rate_app_hint" />

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/material_grey_200"/>

        <LinearLayout
            android:id="@+id/feedback"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="17sp"
                android:text="@string/feedback" />

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="14sp"
                android:text="@string/feedback_hint" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/material_grey_200"/>


        <LinearLayout
            android:id="@+id/terms"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="17sp"
                android:text="@string/terms" />

            <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:textColor="@color/material_grey_700"
                android:textSize="14sp"
                android:text="@string/terms_hint" />

        </LinearLayout>
</LinearLayout>


