<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".socials.UsersProfileActivity"
    tools:showIn="@layout/activity_users_profile">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <HorizontalScrollView
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:scrollbars="none"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            app:singleSelection="true"
            android:layout_gravity="start|center"
            android:minHeight="200dp"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/bio"
                android:checked="true"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio" />

            <com.google.android.material.chip.Chip
                android:id="@+id/posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts" />

            <com.google.android.material.chip.Chip
                android:id="@+id/followers"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

            <com.google.android.material.chip.Chip
                android:id="@+id/following"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


    <!-- A RecyclerView to display list -->
    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
</androidx.core.widget.NestedScrollView>