<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/screen1" />

    <View
        android:background="@color/black_transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <apps.envision.mychurch.ui.fonts.StylishFontTextView
            android:layout_marginTop="20dp"
            android:id="@+id/title"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:transitionName="_title"
            android:textColor="@android:color/white"

            android:textSize="35sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayoutAppearance"
            android:transitionName="_email"
            android:layout_marginBottom="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/material_grey_200"
                android:textColorHighlight="@color/material_grey_200"
                android:hint="@string/email_address" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/duo_shape_rectangled_rounded_color_accent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:onClick="password_reset"
            android:transitionName="_submit"
            android:textColor="@color/material_pink_700" />

    </LinearLayout>
    </ScrollView>

    <apps.envision.mychurch.ui.fonts.RobotoRegularTextView
        android:id="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/back_to_login"
        android:textColor="@color/white" />

</RelativeLayout>